css/style.css
@font-face {
    font-family: 'RobotoExtraBold';
    src: url(../Fonts/WorkSans-ExtraBold.ttf) format('truetype');
}
@font-face {
    font-family: 'RobotoLightItalic';
    src: url(../Fonts/WorkSans-LightItalic.ttf) format('truetype');
}
@font-face {
    font-family: 'RobotoRegular';
    src: url(../Fonts/WorkSans-Regular.ttf) format('truetype');
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: #fff;
    font-family: 'RobotoRegular', sans-serif;
    font-size: 16px;
}

.navbar {
    background-color: #1F2937;
    height: 100px;
}

.wrapper {
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 25px;
}

.navbar .wrapper {
    display: flex;
    justify-content: space-between;
    place-items: center;
    height: 100px;
}

header a {
    font-family: 'RobotoRegular', sans-serif;
    font-size: 24px;
    color: #F9FAF8;
    text-decoration: none;
}

.wrapper .logo {
    font-family: 'RobotoExtraBold', sans-serif;
    font-size: 24px;
}

header li {
    list-style: none;
    display: inline-block;
}

.navbar li a:hover {
    color: #3882F6;
}

.navbar menu li a {
    display: flex;
    color: #F9FAF8;
    margin-left: 40px;
}

footer {
    background-color: #1F2937;
    height: 80px;
    color: #F9FAF8;
    display: flex;
    align-items: center;
    justify-content: center;
}

footer a {
    color: #F9FAF8;
    text-decoration: none;
    position: absolute;
    right: 0;
    margin-right: 50px;
    border: 1px solid #F9FAF8;
    padding: 15px;
    border-radius: 200px;
}

.hero {
    background-color: #1F2937;
    min-height: 400px;
    padding: 80px;
}

.hero h1 {
    font-family: 'RobotoExtraBold', sans-serif;
    font-size: 48px;
    color: #F9FAF8;
    margin-bottom: 10px;
}

.container {
    display: flex;
    flex-wrap: wrap;
    outline: 2px solid red;
}

.container > :nth-child(1) {
    outline: 2px solid green;
    width: 50%;
    
}
.container > :nth-child(2) {
    outline: 2px solid yellow;
    width: 50%;
}

.container > :nth-child(2) > img {
    width: 100%;
    height: 100%;
}

.hero p {
    font-family: 'RobotoRegular', sans-serif;
    font-size: 18px;
    color: #E5E7EB;
    margin-bottom: 30px;
}

.hero a {
    background-color: #3882F6;
    color: #f9faf8;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    margin-top: 20px;
    text-decoration: none;
}

.hero a:hover {
    background-color: #1F2937;
    color: #f9faf8;
    box-shadow: 0px 0px 5px 1.5px rgba(249, 250, 248, 1);
}

.info-text h1 {
    font-family: 'RobotoExtraBold', sans-serif;
    font-size: 36px;
    color: #1F2937;
    margin: 50px;
    text-align: center;
}

.info-box {
    display: flex;
    justify-content: center;
    margin-bottom: 50px;
    flex-wrap: wrap;
}

.info-box .box {
    width: 200px;
    text-align: left;
    padding: 20px;
    flex-wrap: wrap;
}

.box img {
    border-radius: 30px;
    width: 150px;
    height: 150px;
}

.quote-box {
    background: #E5E7EB;
    padding: 70px 100px;
    font-family: 'RobotoLightItalic', sans-serif;
    font-size: 36px;
    color: #1F2937;
}

.quote-box cite {
    font-family: 'RobotoRegular', sans-serif;
    font-weight: bold;
    font-size: 24px;
    color: #1F2937;
    display: block;
    text-align: right;
    margin-top: 20px;
}

.action {
    height: 150px;
    background-color: rgb(56, 130, 246);
    max-width: 800px;
    border-radius: 10px;
    color:#F9FAF8;
    padding: 40px 50px;
    position: relative;
    margin-top: 50px;
    margin-bottom: 50px;
}

.action a {
    padding: 10px 20px;
    border-radius: 5px;
    color: #F9FAF8;
    margin-top: 20px;
    text-decoration: none;
    border: 1px solid #F9FAF8;
    position: absolute;
    right: 0;
    margin: -35px 50px 20px 0px;

}

.action a:hover {
    background-color: #1f2937;
    border: 1.5px solid #f9faf8;
    box-shadow: 0px 0px 11px 1.5px rgba(31, 41, 55, 1);
}
.hero .about {
    display: flex;
    flex-direction: row-reverse;
    text-align: right;
}

.history {
    margin-left: 40px;
} 

.com-box {
    width: 160px;
    justify-content: center;
    align-items: center;
}

.com-box img {
    width: 128px;
    height: 40px;
    margin: 20px;
}

.fixed-box {
    height: 400px;
    background-image: url("../images/thanks/hero-image.jpg");
    width: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.fixed-box h1 {
    font-family: 'RobotoExtraBold', sans-serif;
    font-size: 36px;
    color: #1F2937;
    text-align: center;
    justify-content: center;
    padding: 120px 0 50px 0;
}

.leaders {
    background-color: #1F2937;
    padding: 55px 0 90px;
    color: #F9FAF8;
    clip-path: polygon(0% 0%, 100% 0, 100% 90%, 50% 100%, 0 90%);
}

.leaders h1 {
    font-family: 'RobotoExtraBold', sans-serif;
    font-size: 36px;
    text-align: center;
    margin-bottom: 50px;
}

.hero-contact {
    background-color: #1F2937;
}

.leaders-pics {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.pic-box img {
    width: 200px;
    height: 300px;
    margin: 20px;
    background-size: cover;
    object-fit: cover;
    border-radius: 10px;
    border: 2px solid #1F2937;
    box-shadow: 0px 0px 3px 4px rgba(56, 130, 246, 0.5);
}

.pic-box figcaption {
    margin: -10px 0px 50px 20px;
}

.contact {
    position: relative;
    background-color: #1F2937;
    max-width: 1100px;
}

.contact-img {
    right: 0;
}

.contact img {
    width: 820px;
    height: 500px;
    object-fit: cover;
    position: absolute;
    margin-left: 390px;
}

.contact-info {
    background-color: #1F2937;
    color: #F9FAF8;
    clip-path: polygon(0 0, 70% 0, 45% 100%, 0% 100%);
    padding: 124px 0 100px 18px;
    height: 500px;
}

.hero-contact h1 {
    font-family: 'RobotoExtraBold', sans-serif;
    margin-bottom: 20px;
    font-size: 48px;
    width: 600px;
}

.hero-contact p {
    font-family: 'RobotoRegular', sans-serif;
    font-size: 18px;
    width: 550px;
    line-height: 1.5;
}

.priority {
    color: #3882F6;
}

.contact-form {
    background-color: #E5E7EB;
    border-radius: 20px;
    width: 750px;
    padding: 0px;
    margin-top: 75px;
    margin-bottom: 75px;
}

.contact-msg {
    background-color: #1F2937;
    text-align: center;
    height: 120px;
    font-family: 'RobotoExtraBold', sans-serif;
    padding: 30px;
    border-radius: 20px 20px 0px 0px;
    color: #F9FAF8;
    width: 750px;
}

.contact-msg p {
    font-family: 'RobotoRegular', sans-serif;
    padding: 10px;
}

.actual-form {
    flex-wrap: nowrap;
    padding: 20px;
    max-width: 500px;
    margin: 0 127px;
}

.input-field {
    display: block;
    justify-content: space-between;
    flex-wrap: nowrap;
    margin: 20px 0px 20px 50px;
    padding: 10px;
    width: 360px;
}

.contact-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px 0px 20px 166px;
    width: 139px;
    background-color: #3882F6;
    color: #f9faf8;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    margin-top: 20px;
}

.contact-btn:hover {
    background-color: #1F2937;
    color: #3882F6;
    border: 2px solid #3882F6;
    box-shadow: 0px 0px 5px 1.5px rgba(249, 250, 248, 1);
}

.offices-divider {
    background-color: #1F2937;
    width: 100%;
    font-family: 'RobotoExtraBold', sans-serif;
    font-size: 36px;
    color: #F9FAF8;
    text-align: center;
    padding: 20px;
}

.locations-img {
    display: flex;
    justify-content: space-around;
    flex-direction: row;
    /* margin: 50px 0px 50px 200px; */
    max-width: 950px;
    margin-top: 75px;
    margin-bottom: 75px;
}

.locations-img img {
    width: 250px;
    background-size: cover;
    object-fit: cover;
    border-radius: 10px;
    border: 2px solid #1F2937;
    box-shadow: 0px 0px 3px 2px rgba(56, 130, 246, 0.5);
}

.head-office {
    font-family: 'RobotoLightItalic', sans-serif;
    font-size: 18px;
}

.img-container {
    position: relative;
}

.img-container figcaption {
    position: absolute;
}

.overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgb(31, 41, 55, 0.8);
    overflow: hidden;
    width: 100%;
    height: 0;
    transition: .5s ease;
    border-radius: 10px;
    display: grid;
    place-items: center;
}

.img-container:hover .overlay {
    height: 100%;
}

.overlay p {
    text-align: center;
    color: #F9FAF8;
    font-size: 1.5vw;
    width: 70%
}

.thanks {
    background-image: url("../images/thanks/hero-image.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
    font-family: 'RobotoExtraBold', sans-serif;
    color: #1F2937;
    text-align: center;
    place-items: center;
    border: 2px solid #1F2937;
}

.thanks h1 {
    font-family: 'RobotoExtraBold', sans-serif;
    font-size: 48px;
    padding-top: 300px;
}

.thanks p {
    font-family: 'RobotoRegular', sans-serif;
    font-size: 26px;
}

.signup h1 {
    font-family: 'RobotoExtraBold', sans-serif;
    font-size: 36px;
    padding-top: 30px;
    text-align: center;
}

.contact-wrapper .sign {
    margin: 0 266px;
}

.signup-body {
    height: 85vh;
}

@media (max-width: 768px) {
    .container {
        display: flex;
        flex-direction: column;
        outline: 2px solid red;
    }

    .container > :nth-child(1) {
        outline: 2px solid green;
        width: 100%;
        
    }
    .container > :nth-child(2) {
        outline: 2px solid yellow;
        width: 100%;
    }
}

